--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,16 @@
 <h1>{{ name }}</h1>
 
-<div class='SCREENPLAY'>
-  <canvas #canvas width="400" height="300"></canvas>
-</div>
-<app-dash-dev></app-dash-dev>
+<table>
+  <tr>
+    <td>
+      <div class="SCREENPLAY">
+        <canvas #canvas width="500" height="480"></canvas>
+      </div>
+    </td>
+    <td>
+      <app-dash-dev></app-dash-dev>
+    </td>
+  </tr>
+</table>
+
 <!--button (click)="play()">Play</button-->
